# computer-vision

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
homeworks/: hw_01_cifar_classification.ipynb
homeworks/lab_advanced_captioning/: README.md  lab_advanced_image_captioning.ipynb
seminars/: cv_02_cnn_backbones.ipynb  cv_06_gan_catalyst.ipynb  cv_06_vae_practice.ipynb
