[tool.poetry]
name = "girafe-ai-computer-vision"
version = "0.1.0"
description = "Computer Vision course from girafe-ai"
authors = ["Vladilav Goncharenko <vladislav.goncharenko@phystech.edu>"]

[tool.poetry.dependencies]
python = "~3.9"

# General ML stuff
numpy = "^1.21.4"
matplotlib = "^3.5.0"
scikit-learn = "^1.0.1"

# Computer Vision libraries
opencv-python-headless = "^4.5.4"
Pillow-SIMD = "^7.0.0"
scikit-image = "^0.19.0"

# Deep Learning stuff
torch = "~1.10"
torchvision = "^0.11.1"
torchinfo = "^1.5.4"
catalyst = "^21.11"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
ipykernel = "^6.6.0"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
lines_after_imports = 2

[tool.nbqa.mutate]
black = 1
isort = 1

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
